--- a/src/SerialLoops/Controls/MapCharactersSubEditor.axaml
+++ b/src/SerialLoops/Controls/MapCharactersSubEditor.axaml
@@ -12,120 +12,121 @@
              x:Class="SerialLoops.Controls.MapCharactersSubEditor"
              Loaded="Control_OnLoaded">
 
-    <Grid RowDefinitions="Auto,*,Auto">
-        <Button Grid.Row="0" Content="{x:Static assets:Strings.Add_Map_Characters}"
-                Command="{Binding AddMapCharactersCommand}"
-                IsVisible="{Binding !HasMapCharacters}"/>
+    <ScrollViewer>
+        <Grid RowDefinitions="Auto,*,Auto" HorizontalAlignment="Center">
+            <Button Grid.Row="0" Content="{x:Static assets:Strings.Add_Map_Characters}"
+                    Command="{Binding AddMapCharactersCommand}"
+                    IsVisible="{Binding !HasMapCharacters}"/>
 
-        <Grid Grid.Row="1" RowDefinitions="Auto,*" ColumnDefinitions="*" IsVisible="{Binding HasMapCharacters}">
-            <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" Spacing="10">
-                <ComboBox ItemsSource="{Binding Maps}" SelectedItem="{Binding Map}"/>
+            <Grid Grid.Row="1" RowDefinitions="Auto,*" ColumnDefinitions="*" IsVisible="{Binding HasMapCharacters}">
+                <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" Spacing="10" HorizontalAlignment="Center">
+                    <ComboBox ItemsSource="{Binding Maps}" SelectedItem="{Binding Map}"/>
 
-                <Button Content="{x:Static assets:Strings.Refresh_Maps_List}" Command="{Binding RefreshMapsCommand}"/>
-            </StackPanel>
+                    <Button Content="{x:Static assets:Strings.Refresh_Maps_List}" Command="{Binding RefreshMapsCommand}"/>
+                </StackPanel>
 
-            <ScrollViewer Grid.Row="1" Grid.Column="0">
-                <WrapPanel Orientation="Horizontal">
-                    <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"
-                            DragDrop.AllowDrop="True" Name="MapCanvas">
-                        <!-- Background Layer -->
-                        <ItemsControl ItemsSource="{Binding BgLayer}">
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate DataType="models:LayoutEntryWithImage">
-                                    <Image Source="{Binding CroppedImage, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
-                                           Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"/>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                            <ItemsControl.Styles>
-                                <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
-                                    <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
-                                    <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
-                                    <Setter Property="IsVisible" Value="{Binding IsVisible}"/>
-                                </Style>
-                            </ItemsControl.Styles>
-                        </ItemsControl>
-
-                        <!-- Object Layer -->
-                        <ItemsControl ItemsSource="{Binding ObjectLayer}" Name="ObjectLayerItems">
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate DataType="models:LayoutEntryWithImage">
-                                    <Panel Opacity="0.5" PointerEntered="MapCharacter_OnPointerEntered" PointerExited="MapCharacter_OnPointerExited"
-                                           PointerPressed="DoDrag" PointerReleased="MapCharacter_OnPointerReleased">
+                    <WrapPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0">
+                        <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"
+                                DragDrop.AllowDrop="True" Name="MapCanvas">
+                            <!-- Background Layer -->
+                            <ItemsControl ItemsSource="{Binding BgLayer}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate DataType="models:LayoutEntryWithImage">
                                         <Image Source="{Binding CroppedImage, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
-                                               Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"
-                                               IsHitTestVisible="{Binding HitTestVisible}"/>
-                                    </Panel>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                            <ItemsControl.Styles>
-                                <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
-                                    <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
-                                    <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
-                                </Style>
-                            </ItemsControl.Styles>
-                        </ItemsControl>
+                                               Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"/>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                                <ItemsControl.Styles>
+                                    <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
+                                        <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
+                                        <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
+                                        <Setter Property="IsVisible" Value="{Binding IsVisible}"/>
+                                    </Style>
+                                </ItemsControl.Styles>
+                            </ItemsControl>
 
-                        <!-- Occlusion Layer -->
-                        <ItemsControl ItemsSource="{Binding OcclusionLayer}">
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate DataType="models:LayoutEntryWithImage">
-                                    <Image Source="{Binding CroppedImage, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
-                                           Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"/>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                            <ItemsControl.Styles>
-                                <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
-                                    <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
-                                    <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
-                                </Style>
-                            </ItemsControl.Styles>
-                        </ItemsControl>
-                    </Canvas>
+                            <!-- Object Layer -->
+                            <ItemsControl ItemsSource="{Binding ObjectLayer}" Name="ObjectLayerItems">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate DataType="models:LayoutEntryWithImage">
+                                        <Panel Opacity="0.5" PointerEntered="MapCharacter_OnPointerEntered" PointerExited="MapCharacter_OnPointerExited"
+                                               PointerPressed="DoDrag" PointerReleased="MapCharacter_OnPointerReleased">
+                                            <Image Source="{Binding CroppedImage, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
+                                                   Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"
+                                                   IsHitTestVisible="{Binding HitTestVisible}"/>
+                                        </Panel>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                                <ItemsControl.Styles>
+                                    <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
+                                        <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
+                                        <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
+                                    </Style>
+                                </ItemsControl.Styles>
+                            </ItemsControl>
 
-                    <Grid HorizontalAlignment="Center" ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto" MinWidth="300"
-                          IsEnabled="{Binding SelectedMapCharacter, Converter={x:Static ObjectConverters.IsNotNull}}">
-                        <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Chibi}"/>
-                        <ComboBox Grid.Row="0" Grid.Column="1" Margin="10,0,0,0"
-                                  ItemsSource="{Binding Chibis}" SelectedItem="{Binding SelectedMapCharacter.Chibi}"/>
+                            <!-- Occlusion Layer -->
+                            <ItemsControl ItemsSource="{Binding OcclusionLayer}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate DataType="models:LayoutEntryWithImage">
+                                        <Image Source="{Binding CroppedImage, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
+                                               Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"/>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                                <ItemsControl.Styles>
+                                    <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
+                                        <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
+                                        <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
+                                    </Style>
+                                </ItemsControl.Styles>
+                            </ItemsControl>
+                        </Canvas>
 
-                        <controls:ChibiDirectionSelector Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
-                                                         DataContext="{Binding ChibiDirectionSelector}"/>
+                        <Grid HorizontalAlignment="Center" ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto" MinWidth="300"
+                              IsEnabled="{Binding SelectedMapCharacter, Converter={x:Static ObjectConverters.IsNotNull}}"
+                              Margin="15 5 15 5">
+                            <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Chibi}"/>
+                            <ComboBox Grid.Row="0" Grid.Column="1" Margin="10,0,0,0"
+                                      ItemsSource="{Binding Chibis}" SelectedItem="{Binding SelectedMapCharacter.Chibi}"/>
 
-                        <TextBlock Grid.Row="2" Grid.Column="0" Text="{x:Static assets:Strings.Script_Section}"/>
-                        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Spacing="10" Margin="10,0,0,0">
-                            <ComboBox Margin="10,0,0,0"
-                                      ItemsSource="{Binding ScriptEditor.ScriptSections}"
-                                      SelectedItem="{Binding SelectedMapCharacter.TalkSection}"/>
+                            <controls:ChibiDirectionSelector Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+                                                             DataContext="{Binding ChibiDirectionSelector}"/>
 
-                            <Button Content="{x:Static assets:Strings.Remove_Talk_Link}" Command="{Binding RemoveTalkLinkCommand}"/>
-                        </StackPanel>
+                            <TextBlock Grid.Row="2" Grid.Column="0" Text="{x:Static assets:Strings.Script_Section}"/>
+                            <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Spacing="10" Margin="10,0,0,0">
+                                <ComboBox Margin="10,0,0,0"
+                                          ItemsSource="{Binding ScriptEditor.ScriptSections}"
+                                          SelectedItem="{Binding SelectedMapCharacter.TalkSection}"/>
 
-                        <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Content="{x:Static assets:Strings.Remove_Chibi}"
-                                Command="{Binding RemoveMapCharacterCommand}"/>
-                    </Grid>
-                </WrapPanel>
-            </ScrollViewer>
+                                <Button Content="{x:Static assets:Strings.Remove_Talk_Link}" Command="{Binding RemoveTalkLinkCommand}"/>
+                            </StackPanel>
+
+                            <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Content="{x:Static assets:Strings.Remove_Chibi}"
+                                    Command="{Binding RemoveMapCharacterCommand}"/>
+                        </Grid>
+                    </WrapPanel>
+            </Grid>
+
+            <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal" Spacing="10" HorizontalAlignment="Center">
+                <Button Content="{x:Static assets:Strings.Add_Chibi}" Command="{Binding AddMapCharacterCommand}"/>
+                <Button Content="{x:Static assets:Strings.Remove_Map_Characters}" Command="{Binding RemoveMapCharactersCommand}"/>
+            </StackPanel>
         </Grid>
-
-        <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal" Spacing="10">
-            <Button Content="{x:Static assets:Strings.Add_Chibi}" Command="{Binding AddMapCharacterCommand}"/>
-            <Button Content="{x:Static assets:Strings.Remove_Map_Characters}" Command="{Binding RemoveMapCharactersCommand}"/>
-        </StackPanel>
-    </Grid>
+    </ScrollViewer>
 </UserControl>
 
